--- a/cookbooks/macosx_setup/templates/default/com.googlecode.iterm2.plist.erb
+++ b/cookbooks/macosx_setup/templates/default/com.googlecode.iterm2.plist.erb
@@ -7038,11 +7038,11 @@
 			<key>Name</key>
 			<string>Sean</string>
 			<key>Non Ascii Font</key>
-			<string>Monaco 20</string>
+			<string>InconsolataForPowerline 20</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>Inconsolata 20</string>
+			<string>InconsolataForPowerline 20</string>
 			<key>Option Key Sends</key>
 			<integer>2</integer>
 			<key>Prompt Before Closing 2</key>
@@ -7195,7 +7195,7 @@
 				<string>inconsolata</string>
 			</array>
 			<key>Terminal Type</key>
-			<string>xterm</string>
+			<string>xterm-256color</string>
 			<key>Transparency</key>
 			<real>0.0</real>
 			<key>Triggers</key>
